--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
         <h1>Curriculum Visualization</h1>
         <nav>
             <ul>
-                <li class="active"><a href="{{ url_for('dashboard_view') }}">Dashboard</a></li>
+                <li class="active"><a href="{{ url_for('index') }}">Dashboard</a></li>
                 <li><a href="{{ url_for('standards_view') }}">Standards</a></li>
                 <li><a href="{{ url_for('lessons_view') }}">Lessons</a></li>
                 <li><a href="{{ url_for('visualization_view') }}">Visualization</a></li>
